Fix padding between 600 & 680px

--- a/client/me/style.scss
+++ b/client/me/style.scss
@@ -1,5 +1,7 @@
-html {
-	overflow-y: hidden;
+@media only screen and (min-width: 601px) {
+	html {
+		overflow-y: hidden;
+	}
 }
 
 body.is-section-me {
@@ -34,7 +36,7 @@ body.is-section-me {
 			@media only screen and (min-width: 600px) and (max-width: 960px) {
 				padding: 24px;
 			}
-			@media only screen and (max-width: 660px) {
+			@media only screen and (max-width: 600px) {
 				padding-top: 0;
 			}
 			border-block-end: 1px solid var(--studio-gray-0);
