--- a/client/me/developer/style.scss
+++ b/client/me/developer/style.scss
@@ -1,9 +1,12 @@
 @import "@wordpress/base-styles/breakpoints.scss";
 @import "@automattic/typography/styles/variables";
 @import "@automattic/components/src/styles/typography";
+@import "@wordpress/base-styles/mixins";
 
 .navigation-header.developer__header {
-	margin-top: 50px;
+	@include break-small {
+		margin-top: 50px;
+	}
 
 	.formatted-header__title {
 		font-family: $brand-serif;
