--- a/client/me/style.scss
+++ b/client/me/style.scss
@@ -19,6 +19,9 @@ body.is-section-me {
 		@media only screen and (min-width: 782px) {
 			padding: 16px 16px 16px calc(var(--sidebar-width-max)) !important;
 		}
+		@media only screen and (max-width: 600px) {
+			background: var(--studio-white);
+		}
 		.layout_primary > div {
 			padding-bottom: 0;
 		}
@@ -39,6 +42,7 @@ body.is-section-me {
 			}
 			@media only screen and (max-width: 600px) {
 				padding-top: 0;
+				padding-bottom: 0;
 			}
 			border-block-end: 1px solid var(--studio-gray-0);
 		}
@@ -46,7 +50,7 @@ body.is-section-me {
 			background: var(--color-surface);
 			border-radius: 8px; /* stylelint-disable-line scales/radii */
 			box-shadow: none;
-			@media only screen and (min-width: 600px) {
+			@media only screen and (min-width: 601px) {
 				height: calc(100vh - var(--masterbar-height) - 50px);
 			}
 			@media only screen and (min-width: 782px) {
