--- a/client/my-sites/plugins/style.scss
+++ b/client/my-sites/plugins/style.scss
@@ -88,6 +88,10 @@ body.is-section-plugins {
 			@include breakpoint-deprecated( "<600px" ) {
 				padding: 1rem 0;
 			}
+
+			@include breakpoint-deprecated( "<480px" ) {
+				padding: 1rem 0;
+			}
 		}
 	}
 
