--- a/client/a8c-for-agencies/components/a4a-migration-offer/style.scss
+++ b/client/a8c-for-agencies/components/a4a-migration-offer/style.scss
@@ -23,12 +23,22 @@
 	}
 
 	.foldable-card__content {
+		padding-block-start: 0;
 		border: none;
 	}
 
 	&.foldable-card.is-expanded .foldable-card__content {
+		padding-block: 0 24px;
+		padding-inline: 24px;
 		border: none;
-		padding-block-start: 8px;
+	}
+
+	.foldable-card__action {
+		right: 8px;
+	}
+
+	.foldable-card__expand .gridicon {
+		fill: var(--color-neutral-100);
 	}
 
 	.a4a-migration-offer__title {
@@ -49,10 +59,9 @@
 
 	.a4a-migration-offer__description {
 		color: var(--studio-gray-80);
-		font-size: 1rem;
+		font-size: rem(16px);
 		font-weight: 400;
-		line-height: 1.65;
-		margin-block-start: 16px;
+		line-height: 1.5;
 	}
 
 	.a4a-migration-offer__details-button {
