--- a/client/reader/sidebar/style.scss
+++ b/client/reader/sidebar/style.scss
@@ -59,10 +59,10 @@ body.is-reader-page,
 .is-reader-page .layout,
 .layout.is-section-reader,
 .layout.is-section-reader .layout__content,
-.is-section-reader {
+.is-section-reader:not(.is-reader-full-post) {
 	background: initial;
 }
-body.is-section-reader {
+body.is-section-reader:not(.is-reader-full-post) {
 	background: var(--studio-gray-0);
 
 	&.rtl .layout__content {
