Update breakpoint from 600 to 660; fixing the calypso warning

--- a/client/blocks/plugins-scheduled-updates-multisite/styles.scss
+++ b/client/blocks/plugins-scheduled-updates-multisite/styles.scss
@@ -4,7 +4,7 @@
 $brand-display: "SF Pro Display", sans-serif;
 
 .plugins-update-manager-multisite {
-	@media screen and (max-width: $break-small) {
+	@media screen and (max-width: 660px) {
 		margin: 1rem;
 	}
 
