--- a/client/my-sites/plugins/style.scss
+++ b/client/my-sites/plugins/style.scss
@@ -94,6 +94,10 @@ body.is-section-plugins {
 				padding: 1rem 0;
 			}
 
+			@include breakpoint-deprecated( "<660px" ) {
+				padding: 1rem 0;
+			}
+
 			@include breakpoint-deprecated( "<480px" ) {
 				padding: 1rem 0;
 			}
