--- a/client/sites-dashboard-v2/dotcom-style.scss
+++ b/client/sites-dashboard-v2/dotcom-style.scss
@@ -48,10 +48,10 @@
 		margin: 4px 0 0 0;
 		line-height: 20px;
 		letter-spacing: -0.15px;
-		white-space: nowrap;
 	}
 
 	.a4a-layout__header-actions {
+		width: auto;
 		a {
 			font-weight: normal;
 		}
