--- a/client/reader/search-stream/style.scss
+++ b/client/reader/search-stream/style.scss
@@ -19,11 +19,22 @@
 	margin-bottom: 4px;
 }
 
+.layout.has-header-section.is-section-reader {
+
+	.layout__content {
+		background: var(--studio-white);
+	}
+	.main.search-stream {
+		padding-inline: 0;
+	}
+}
+
 
 .is-reader-page .main.search-stream {
 	max-width: 905px;
 	margin: 0 auto;
 	padding-inline: 24px;
+	padding-top: 0 !important;
 }
 
 .search-stream__intro {
@@ -60,20 +71,13 @@
 
 .is-reader-page .search-stream__fixed-area {
 	background: var(--studio-white);
-	position: fixed;
+	position: sticky;
 	top: 0;
-	margin-top: var(--masterbar-height);
 	z-index: 20;
 	-webkit-font-smoothing: subpixel-antialiased; // Fixes fixed elements text aliasing in Safari
 
-	@media only screen and (min-width: 601px) and (max-width: 781px) {
-		margin-top: calc(var(--masterbar-height) + 25px);
-	}
 	@media only screen and (min-width: 601px) and (max-width: 660px) {
 		width: calc(100% - 96px);
-	}
-	@media only screen and (min-width: 782px) {
-		margin-top: 16px;
 	}
 }
 
