--- a/client/blocks/plugins-scheduled-updates-multisite/styles.scss
+++ b/client/blocks/plugins-scheduled-updates-multisite/styles.scss
@@ -54,7 +54,7 @@ $brand-display: "SF Pro Display", sans-serif;
 		th,
 		td {
 			font-size: 0.875rem;
-			padding: 1rem 0;
+			padding: 1rem 0.125rem;
 			color: var(--studio-gray-60);
 			border-bottom: solid 1px var(--studio-gray-0);
 		}
@@ -68,7 +68,7 @@ $brand-display: "SF Pro Display", sans-serif;
 		}
 
 		td {
-			padding: 0.5rem 0;
+			padding: 0.5rem 0.125rem;
 			vertical-align: middle;
 
 			&.last-update {
@@ -86,6 +86,14 @@ $brand-display: "SF Pro Display", sans-serif;
 				button {
 					margin-top: rem(2px);
 				}
+			}
+
+			&.name {
+				width: 300px;
+			}
+
+			&.sites {
+				width: 80px;
 			}
 
 			&.menu {
