--- a/client/sites-dashboard-v2/dotcom-style.scss
+++ b/client/sites-dashboard-v2/dotcom-style.scss
@@ -28,12 +28,45 @@
 		}
 	}
 
+	.a4a-layout__header {
+		align-items: initial;
+		@media ( max-width: 660px ) {
+			align-items: center;
+		}
+	}
+
 	.a4a-layout__header-main {
 		display: block;
 	}
 
 	.a4a-layout__header-title {
 		display: block;
+	}
+
+	.a4a-layout__header-subtitle {
+		font-size: 0.875rem;
+		margin: 4px 0 0 0;
+		line-height: 20px;
+		letter-spacing: -0.15px;
+	}
+
+	.a4a-layout__header-actions {
+		width: auto;
+		a {
+			font-weight: normal;
+		}
+	}
+
+	.sites-manage-all-domains-button {
+		border-color: var(--color-neutral-10);
+
+		@media (max-width: 959px) {
+			margin-inline-end: 8px !important;
+		}
+	}
+
+	.sites-manage-all-domains-button:hover {
+		border-color: var(--color-neutral-20);
 	}
 
 	height: calc(100vh - var(--masterbar-height));
@@ -314,8 +347,13 @@
 			margin-right: 0;
 		}
 
+		.a4a-layout__header {
+			align-items: center !important;
+		}
+
 		.sites-site-thumbnail,
-		.sites-manage-all-domains-button {
+		.sites-manage-all-domains-button,
+		.a4a-layout__header-subtitle {
 			display: none;
 		}
 
