--- a/client/sites-dashboard-v2/style.scss
+++ b/client/sites-dashboard-v2/style.scss
@@ -38,6 +38,10 @@
 		padding-block-start: 24px;
 	}
 
+	.components-button.is-compact.is-tertiary:not(.dataviews-filters-button)[aria-disabled="true"] {
+		display: none;
+	}
+
 	@media (min-width: $break-large) {
 		background: inherit;
 
