chore: Update font family for woo social buttons

--- a/client/layout/masterbar/woo.scss
+++ b/client/layout/masterbar/woo.scss
@@ -1417,6 +1417,7 @@ $breakpoint-mobile: 660px;
 					font-weight: 500;
 					line-height: 24px;
 					color: var(--studio-gray-100);
+					font-family: $woo-inter-font;
 				}
 
 				.social-icons {
