Add active form toggle to card component

--- a/client/blocks/plugins-scheduled-updates/styles.scss
+++ b/client/blocks/plugins-scheduled-updates/styles.scss
@@ -164,6 +164,10 @@
 		.badge-component {
 			margin-inline-start: 0.5rem;
 		}
+
+		.components-form-toggle {
+			margin-top: 0.125rem;
+		}
 	}
 
 	.components-card__footer {
