Update form toggle control style

--- a/client/blocks/plugins-scheduled-updates/styles.scss
+++ b/client/blocks/plugins-scheduled-updates/styles.scss
@@ -103,6 +103,17 @@
 		color: var(--studio-gray-60);
 	}
 
+	.components-form-toggle {
+		.components-form-toggle__track {
+			border-color: var(--color-text) !important;
+			background-color: var(--color-text) !important;
+		}
+
+		.components-form-toggle__thumb {
+			background-color: #fff !important;
+		}
+	}
+
 	table {
 		th,
 		td {
