--- a/client/blocks/plugins-scheduled-updates-multisite/styles.scss
+++ b/client/blocks/plugins-scheduled-updates-multisite/styles.scss
@@ -1,23 +1,13 @@
-@import "~@automattic/color-studio/dist/color-variables";
-@import "@wordpress/base-styles/breakpoints";
+@import "../plugin-scheduled-updates-common/styles";
 
 $brand-display: "SF Pro Display", sans-serif;
 
 .plugins-update-manager-multisite {
-	@media screen and (max-width: 660px) {
-		margin: 1rem;
-	}
-
 	&.plugins-update-manager-multisite-edit,
 	&.plugins-update-manager-multisite-create {
 		h1 {
 			font-size: 2rem !important;
 		}
-	}
-
-	h1 {
-		font-size: 2rem;
-		margin-bottom: 1rem;
 	}
 
 	.components-notice {
@@ -26,84 +16,6 @@ $brand-display: "SF Pro Display", sans-serif;
 
 		ul {
 			margin-top: 1.25rem;
-		}
-	}
-
-	.schedule-form {
-		margin-bottom: 1.25rem;
-
-		& > .form-control-container {
-			margin-bottom: 1.25rem;
-
-			&:last-child {
-				margin-bottom: 0;
-			}
-
-			& > .components-flex {
-				gap: 2rem;
-
-				& > .components-flex-item {
-					flex-basis: 100%;
-					width: 100%;
-				}
-			}
-		}
-	}
-
-	.plugins-update-manager-multisite-table {
-		th,
-		td {
-			font-size: 0.875rem;
-			padding: 1rem 0.125rem;
-			color: var(--studio-gray-60);
-			border-bottom: solid 1px var(--studio-gray-0);
-		}
-
-		th {
-			font-weight: 500;
-
-			&.expand {
-				width: 4rem;
-			}
-		}
-
-		td {
-			padding: 0.5rem 0.125rem;
-			vertical-align: middle;
-
-			&.last-update {
-				min-width: 200px;
-			}
-
-			.badge-component {
-				line-height: 2;
-			}
-
-			&.expand {
-				text-align: center;
-				line-height: 1;
-
-				button {
-					margin-top: rem(2px);
-				}
-			}
-
-			&.name {
-				width: 300px;
-			}
-
-			&.sites {
-				width: 80px;
-			}
-
-			&.menu {
-				text-align: center;
-			}
-		}
-
-
-		&__expanded {
-			background-color: var(--studio-gray-0);
 		}
 	}
 
@@ -149,31 +61,6 @@ $brand-display: "SF Pro Display", sans-serif;
 			.components-spinner {
 				display: none;
 			}
-		}
-	}
-	&__header {
-		align-items: center;
-		border-block-end: 1px solid var(--color-border-secondary);
-		display: flex;
-		font-family: $brand-display;
-		justify-content: space-between;
-		padding-bottom: 1.5rem;
-
-		&.no-border {
-			border-block-end: none;
-		}
-
-		h1 {
-			font-size: 1.5rem;
-			font-style: normal;
-			font-weight: 500;
-			line-height: 1.2;
-			margin-bottom: 0;
-		}
-
-		button {
-			font-size: rem(14px);
-			border-radius: 4px;
 		}
 	}
 
@@ -281,7 +168,6 @@ $brand-display: "SF Pro Display", sans-serif;
 				}
 			}
 		}
-
 	}
 
 	.components-card__footer {
